--- a/css/main.css
+++ b/css/main.css
@@ -1137,10 +1137,10 @@ section.pageblock {
   border: 1px solid #CE9D70;
   box-sizing: border-box;
   border-radius: 8px;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  right: 0;
+  width: calc(100% - 20px);
+  height:calc(100% - 20px);
+  top: 10px;
+  right: 10px;
   position: absolute;
   content: "";
   opacity: 0;
@@ -1149,8 +1149,7 @@ section.pageblock {
 
 .category__wrapper:hover:after {
   opacity: 1;
-  top: -10px;
-  right: -10px;
+ 
 }
 
 .category__wrapper {
@@ -1420,7 +1419,12 @@ p a {
   content: "";
   transition: all 0.3s ease;
 }
-
+.contacts:hover:after {
+top: 16px;
+  right: 16px;
+   width: calc(100% - 32px);
+  height: calc(100% - 32px);
+}
 .contacts__title img {
   display: inline-block;
   vertical-align: middle;
@@ -2299,12 +2303,19 @@ td.pricelist__price {
   box-sizing: border-box;
   border-radius: 8px;
   width: 100%;
-  height: 100px;
+  height: 100%;
   position: absolute;
   z-index: 0;
   top: -20px;
   right: -20px;
-  min-height: 335px;
+  transition: all 0.3s ease;
+}
+
+.promoblock__wrapper:hover:after {
+	 top: 20px;
+  right: 20px;
+  width: calc(100% - 40px);
+  height: calc(100% - 40px);
 }
 
 .promoblock__content {
@@ -2334,10 +2345,19 @@ td.pricelist__price {
 }
 
 .promoblock__buttons {
-  max-width: 492px;
   margin: 0 auto 0 auto;
+  text-align: center;
+   /* max-width: 492px;*/
+
 }
 
+.promoblock__buttons .phone img {
+	width: 36px;
+}
+
+.promoblock .phone span {
+	font-size: 27px;
+}
 .btn_gradient {
   font-style: normal;
   font-weight: 500;
@@ -2354,7 +2374,7 @@ td.pricelist__price {
   color: #FFFFFF;
 }
 
-.btn_gradient:hover {
+.btn_gradient:hover, .btn_gradient:focus {
   color: #FFFFFF;
 }
 
@@ -2685,10 +2705,13 @@ a.play span {
   -moz-column-count: 4;
   -webkit-column-count: 4;
   column-count: 4;
+ 
 }
 
 .iconitem {
   margin-bottom: 24px;
+  white-space: nowrap;
+  max-width: 25%;
 }
 
 .iconitem__icon {
@@ -2989,6 +3012,10 @@ a.lb-close {
   background: #49A399;
   color: #fff;
 }
+.btn_maps_green:hover,
+.btn_maps_green:focus {
+	color: #fff;
+}
 
 .detailfitches__image {
   margin-bottom: 16px;
@@ -3181,6 +3208,11 @@ color: #000000;
   margin-bottom: 16px;
 }
 
+::selection {
+    color: #000; 
+    background: #DCE4E1; 
+   }
+
 @media (max-width: 1220px) {
   .text-image .text {
     width: 50%;
@@ -3304,6 +3336,9 @@ a.phone span {
 }
 
 @media (max-width: 1023px) {
+	.pagetitle__descr br {
+		display: none;
+	}
   .detail_event {
     margin-bottom: 24px;
   }
@@ -4569,6 +4604,7 @@ line-height: 100%;
   }
   .iconitem {
     padding: 0 10px;
+    max-width: 50%;
   }
   .blockcaption {
     margin-bottom: 24px;
@@ -4662,4 +4698,11 @@ line-height: 100%;
   .borderblock {
     margin: 40px 0;
   }
+  .promoblock__buttons .phone img {
+	width: initial;
+}
+
+.promoblock .phone span {
+	font-size: 16px;
+}
 }
